@@ -1,10 +1,18 @@
 SUBDIRS                        = dolfin
 include_HEADERS                = dolfin/dolfin_tanganyika.h \
+                                 dolfin/cGqElement.h \
                                  dolfin/cGqMethod.h \
+                                 dolfin/dGqElement.h \
                                  dolfin/dGqMethod.h \
+                                 dolfin/Element.h \
+                                 dolfin/GenericElement.h \
                                  dolfin/Method.h
 INCLUDES                       = @MODULE_INCLUDES@
 lib_LIBRARIES                  = libdolfin-tanganyika.a
-libdolfin_tanganyika_a_SOURCES = cGqMethod.cpp \
+libdolfin_tanganyika_a_SOURCES = cGqElement.cpp \
+                                 cGqMethod.cpp \
+                                 dGqElement.cpp \
                                  dGqMethod.cpp \
+                                 Element.cpp \
+                                 GenericElement.cpp \
                                  Method.cpp
