@@ -1,2 +1,5 @@
+all:
+	rm -f ../config/dolfin-config
+
 install:
 	mkdir -p $(prefix)/include/dolfin	
